[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aikasilta"
version = "2022.7.24"
description = "Time bridge (Finnish: aikasilta) - experimental reporting bridge from the Nineties into right now."
readme = "README.md"
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
]
keywords = ["developer-tools", "devops"]
dependencies = [
    "Jinja2 >= 3.1.2",
    "aiohttp >= 3.8.6",
    "asyncpg >= 0.29.0",
    "atlassian-python-api >= 3.41.3",
    "attrs >= 23.1.0",
    "starlette >= 0.32.0.post1",
    "typer >= 0.9.0",
    "uplink >= 0.9.7",
    "websockets >= 12.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "coverage", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "ruff"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/aikasilta"
Bug-Tracker = "https://todo.sr.ht/~sthagen/aikasilta"
Documentation = "https://codes.dilettant.life/docs/aikasilta"
Source-Code = "https://git.sr.ht/~sthagen/aikasilta"
Test-Coverage = "https://codes.dilettant.life/coverage/aikasilta"

[project.scripts]
aikasilta = "aikasilta.cli:app"

[tool.setuptools.packages.find]
include = ["aikasilta"]
exclude = ["test*"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py39", "py310", "py311", "py312"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/__main__.py",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "Q"]
ignore = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
unfixable = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.mccabe]
max-complexity = 42  # default is 10

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"

